# Cyswllt

./: .gitignore  CHANGELOG.md  CyswlltPlan.md  README.md  SECURITY.md  build_release.sh  build_test.sh  install.sh  pyproject.toml  release_notes.md
Audit/: sbom.json
artifacts/: checksums.sha512  cyswllt_0.1.0-1.dsc  cyswllt_0.1.0-1_all.deb  cyswllt_0.1.0-1_amd64.build  cyswllt_0.1.0-1_amd64.buildinfo  cyswllt_0.1.0-1_amd64.changes  cyswllt_0.1.10-1.debian.tar.xz  cyswllt_0.1.10-1.dsc  cyswllt_0.1.10-1_all.deb  cyswllt_0.1.10-1_all.deb.asc  cyswllt_0.1.10-1_amd64.build  cyswllt_0.1.10-1_amd64.buildinfo  cyswllt_0.1.10-1_amd64.changes  cyswllt_0.1.11-1.debian.tar.xz  cyswllt_0.1.11-1.dsc  cyswllt_0.1.11-1_all.deb  cyswllt_0.1.11-1_amd64.build  cyswllt_0.1.11-1_amd64.buildinfo  cyswllt_0.1.11-1_amd64.changes  cyswllt_0.1.12-1.debian.tar.xz  cyswllt_0.1.12-1.dsc  cyswllt_0.1.12-1_all.deb  cyswllt_0.1.12-1_all.deb.asc  cyswllt_0.1.12-1_amd64.build  cyswllt_0.1.12-1_amd64.buildinfo  cyswllt_0.1.12-1_amd64.changes  cyswllt_0.1.13-1.debian.tar.xz  cyswllt_0.1.13-1.dsc  cyswllt_0.1.13-1_all.deb  cyswllt_0.1.13-1_amd64.build  cyswllt_0.1.13-1_amd64.buildinfo  cyswllt_0.1.13-1_amd64.changes  cyswllt_0.1.14-1.debian.tar.xz  cyswllt_0.1.14-1.dsc  cyswllt_0.1.14-1_all.deb  cyswllt_0.1.14-1_all.deb.asc  cyswllt_0.1.14-1_amd64.build  cyswllt_0.1.14-1_amd64.buildinfo  cyswllt_0.1.14-1_amd64.changes  cyswllt_0.1.15-1.debian.tar.xz  (+64 more)
data/: com.taliskerman.cyswllt.desktop
debian/: changelog  control  copyright  cyswllt.postinst  cyswllt.postinst.debhelper  cyswllt.prerm.debhelper  (+3 more)
(+21 files in other folders)
