[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "cyswllt"
dynamic = ["version"]
description = "Mount and unmount your Google Drive on Linux via rclone, with a GTK4/libadwaita UI."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "GPL-3.0-or-later" }
authors = [{ name = "Chuck Talk, Nordheim Online, LLC", email = "chuck@nordheim.online" }]
# PyGObject (the `gi` bindings) is required at runtime. On Debian/Ubuntu it is
# normally provided by the system package python3-gi rather than pip.
dependencies = ["PyGObject"]

[project.urls]
Homepage = "https://github.com/TaliskerMan/Cyswllt"

[project.scripts]
cyswllt = "cyswllt.main:main"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.dynamic]
version = { attr = "cyswllt.version.__version__" }
